added capstone to portfolio. will update other projects later

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <a href="#skills" class="btn-scroll scrollto" title="Scroll Down">
                 <i class="bx bx-chevron-down">
                     SKILLS
+                    <br>
                 </i>
             </a>
         </div>
@@ -117,7 +118,7 @@
 
             <div class="row" id="row1">
                 <div class="col-lg-4">
-                    <img src="media/648.jpg" alt="Test">
+                    <img src="media\Screenshot 2021-05-22 213122.png" alt="Test">
                 </div>
                 <div class="col-lg-4">
                     <img src="media/648.jpg" alt="Test">
@@ -200,13 +201,13 @@
                     </div>
                     <h3 class="resume-title">Professional Experience</h3>
                     <div class="resume-item">
-                        <h4>Position at company</h4>
+                        <!-- <h4>Position at company</h4>
                         <h5>Years Worked</h5>
                         <p><em>Company and address</em></p>
                         <ul>
                             <li>Key Roles</li>
                             <li>Responsibilities</li>
-                            <li>Related Skills</li>
+                            <li>Related Skills</li> -->
                         </ul>
                         <p>Will update this once I gain work experience. Stay tuned!</p>
                     </div>
